force-app/main/default/objects/Lead/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>Captures why a lead was closed without conversion. Required when a lead is moved to a closed-lost stage. Used in conversion rate analysis and pipeline health reporting to identify common disqualification patterns.</description>
    <helpText>Why this lead was closed without converting. Required when moving to a Closed stage.</helpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>Went with Competitor</fullName>
            </value>
            <value>
                <fullName>Timing Not Right</fullName>
            </value>
            <value>
                <fullName>Mission Misalignment</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>