force-app/main/default/objects/Lead/fields/Current_CRM__c.field-meta.xml
<CustomField>
    <fullName>Current_CRM__c</fullName>
    <description>The CRM or data management tool the prospect currently uses. Key qualification signal — leads using spreadsheets or no CRM represent a greenfield opportunity, while existing CRM users may be replacing a competitor platform.</description>
    <inlineHelpText>What CRM or data tool does this prospect currently use for managing contacts and activities?</inlineHelpText>
    <label>Current CRM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>Zoho CRM</fullName>
            </value>
            <value>
                <fullName>Monday.com</fullName>
            </value>
            <value>
                <fullName>Airtable</fullName>
            </value>
            <value>
                <fullName>Spreadsheets Only</fullName>
            </value>
            <value>
                <fullName>No CRM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>