force-app/main/default/objects/Lead/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <description>The Stage_Key__c of the Pipeline_Stage__mdt record this lead currently occupies. Set automatically when a lead is moved on the pipeline board or when Status changes via trigger. Used as the primary grouping key for the kanban columns.</description>
    <inlineHelpText>The pipeline stage this lead is currently in. Managed automatically by Lead Tracker — do not edit manually.</inlineHelpText>
    <label>Current Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>