force-app/main/default/objects/Lead/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>Numeric engagement score from 0 to 100. Higher values indicate stronger engagement signals (email opens, call completions, meeting attendance, form submissions). Updated by the scoring engine in the service layer. Displayed as a badge on lead cards in stages configured for score display.</description>
    <helpText>Engagement score 0–100. Updated automatically based on interaction signals. Higher is more engaged.</helpText>
    <label>Engagement Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>