force-app/main/default/objects/Lead/fields/Funding_Model__c.field-meta.xml
<CustomField>
    <fullName>Funding_Model__c</fullName>
    <description>Primary funding model of the prospect organization. Critical qualification field for nonprofit pipeline — determines budget cycle, procurement process, and decision-making timeline. Government-funded orgs have longer procurement cycles than fee-for-service orgs.</description>
    <helpText>How does this organization primarily fund its operations? Affects budget cycles and decision timelines.</helpText>
    <label>Funding Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Government Grants</fullName>
            </value>
            <value>
                <fullName>Private Foundation</fullName>
            </value>
            <value>
                <fullName>Corporate Sponsorship</fullName>
            </value>
            <value>
                <fullName>Individual Donors</fullName>
            </value>
            <value>
                <fullName>Fee for Service</fullName>
            </value>
            <value>
                <fullName>Earned Revenue</fullName>
            </value>
            <value>
                <fullName>Mixed Funding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>