force-app/main/default/objects/Lead/fields/Is_Stale__c.field-meta.xml
<CustomField>
    <fullName>Is_Stale__c</fullName>
    <description>Flag set to true by the stale detection job when a lead in an activity-required stage has not had any activity for more than Pipeline_Stage__mdt.SLA_Days__c days. Cleared automatically when a new activity is logged. Stale leads are visually highlighted on the pipeline board.</description>
    <helpText>True when this lead has exceeded its stage SLA without activity. Cleared automatically when a new activity is logged.</helpText>
    <defaultValue>false</defaultValue>
    <label>Is Stale</label>
    <type>Checkbox</type>
</CustomField>