force-app/main/default/objects/Lead/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Date of the most recent sales activity (call, email, meeting) logged against this lead. Updated by trigger when Activity records are created. Used by the SLA monitoring engine to detect stale leads when compared against Pipeline_Stage__mdt.SLA_Days__c.</description>
    <inlineHelpText>Date of the last logged activity. Used to detect stale leads based on the stage SLA.</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>