force-app/main/default/objects/Lead/fields/Lead_Health__c.field-meta.xml
<CustomField>
    <fullName>Lead_Health__c</fullName>
    <description>Composite health signal for this lead. Healthy = active engagement and on schedule. At Risk = SLA approaching or engagement declining. Critical = SLA breached or no activity in extended period. Calculated by the stale detection scheduled job or updated by the service layer on key events.</description>
    <inlineHelpText>Overall lead health: Healthy (on track), At Risk (SLA approaching), or Critical (SLA breached).</inlineHelpText>
    <label>Lead Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
                <default>true</default>
                <label>Healthy</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>