force-app/main/default/objects/Lead/fields/Next_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up__c</fullName>
    <description>The date by which the owning rep must follow up with this lead. Displayed as a badge on the lead card when the stage is configured to show it. Overdue follow-up dates trigger visual warnings on the pipeline board.</description>
    <helpText>The next scheduled follow-up date for this lead. Overdue dates appear highlighted on the pipeline board.</helpText>
    <label>Next Follow Up</label>
    <type>Date</type>
</CustomField>