force-app/main/default/objects/Lead/fields/Organization_Size__c.field-meta.xml
<CustomField>
    <fullName>Organization_Size__c</fullName>
    <description>Headcount band of the prospect organization. Used for lead scoring, segmentation, and pipeline analytics. Mapped to the nonprofit sector convention (includes paid staff and volunteers where relevant).</description>
    <inlineHelpText>Approximate size of the prospect organization by number of employees/staff.</inlineHelpText>
    <label>Organization Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1–10 Employees</fullName>
            </value>
            <value>
                <fullName>11–50 Employees</fullName>
            </value>
            <value>
                <fullName>51–200 Employees</fullName>
            </value>
            <value>
                <fullName>201–1,000 Employees</fullName>
            </value>
            <value>
                <fullName>1,000+ Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>