force-app/main/default/objects/Lead/fields/Pipeline_Type__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Type__c</fullName>
    <description>Assigns this lead to a specific pipeline (e.g., Nonprofit, Enterprise). Must match a Pipeline_Stage__mdt.Pipeline_Type__c value for the board to correctly place this lead in the right pipeline view. Defaults to Application_Config__mdt.Default_Pipeline__c on insert.</description>
    <inlineHelpText>Which pipeline this lead belongs to (e.g., Nonprofit, Enterprise). Determines which board view shows this lead.</inlineHelpText>
    <label>Pipeline Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>