force-app/main/default/objects/Lead/fields/Primary_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Primary_Stakeholder__c</fullName>
    <description>Name and role of the primary decision-maker or champion at the prospect organization. Free-text to accommodate any stakeholder format. Displayed on the lead card in Spacious density mode.</description>
    <inlineHelpText>Name and title of the key decision-maker or internal champion. Example: Jane Smith, Executive Director</inlineHelpText>
    <label>Primary Stakeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>